<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/txtDrive_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/driver"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtRegno_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/reg_no"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtStarttime_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/start_time"
                    android:textColor="#000"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/txt1stbreak_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/first_break"
                    android:textColor="#000"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/txt2ndbreak_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/second_break"
                    android:textColor="#000"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/txtendtime_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/end_time"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>